tests/NormalTests/paczka1/fuzzy1/81710430.err
Error in line 10: iwvmthN A454 213,6
Error in line 4: mKUrgYWiy0 A28 3,0
Error in line 8: z15 A28 75,1
Error in line 21: z15 A138 45,6
Error in line 35: iwvmthN A138 64,6
